# HW_ML_1

./: Dockerfile  assistant_main.py  pyproject.toml
