[tool.poetry]
name = "module-8"
version = "0.1.0"
description = ""
authors = ["Denys <164438080+DotardOneClick@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
